--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "volk/ShopwareLegalNoticesImmediatelyVisible",
   "description": "Shopware Legal Notices Immediately Visible",
-  "version": "0.1.0-alpha.1",
+  "version": "0.1.1",
   "type": "shopware-platform-plugin",
   "license": "MIT",
   "authors": [
